--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/cytoscape-ci/prime#readme",
   "dependencies": {
+    "cyto-framework": "0.0.4",
     "history": "^1.17.0",
     "immutable": "^3.7.6",
     "react": "^0.14.3",
